Update textarea style

--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
                 cols="30"
                 rows="10"
                 placeholder="Your Message"
+                style="resize: none"
               ></textarea>
             </div>
             <div
